# PyQCefView

./: .gitignore  .gitmodules  LICENSE  README.md  generate.sh  project.py  pyproject.toml  requirements-dev.txt
examples/: demo.py
sip/: QCefConfig.sip  QCefContext.sip  QCefDownloadItem.sip  QCefEvent.sip  QCefQuery.sip  QCefSetting.sip  QCefView.sip
src/: QCefView.pro
tpl/: QCefView.sip.in
